Fix mobile post spacing

--- a/less/site.less
+++ b/less/site.less
@@ -5315,6 +5315,15 @@ body * {
   .post-info {
     font-size: 14px;
   }
+  .post-entry {
+    margin-bottom: 1.5rem;
+    .post-content {
+      margin-bottom: 1.5rem;
+    }
+  }
+  .pager {
+    margin-top: 0;
+  }
 }
 
 .hide-desktop {
